# scrapegraph-py

./: .gitignore  .releaserc.json  CLAUDE.md  CONTRIBUTING.md  HEALTHCHECK.md  IMPLEMENTATION_SUMMARY.md  README.md  package.json  pyproject.toml
.agent/: README.md
.agent/sop/: releasing_version.md
.agent/system/: project_architecture.md
.agent/tasks/: example_feature_template.md
.claude/skills/test-sdk/: SKILL.md
.github/sync-reports/: 2026-07-15.md
.github/workflows/: ci.yml  python-publish.yml  release.yml  test.yml
cookbook/chat-webpage-simple-rag/: scrapegraph_burr_lancedb.ipynb
cookbook/company-info/: scrapegraph_langchain.ipynb  scrapegraph_llama_index.ipynb  scrapegraph_sdk.ipynb
cookbook/github-trending/: scrapegraph_langchain.ipynb  scrapegraph_llama_index.ipynb  scrapegraph_sdk.ipynb
cookbook/homes-forsale/: scrapegraph_langchain.ipynb  scrapegraph_llama_index.ipynb  scrapegraph_sdk.ipynb
cookbook/research-agent/: crewai_integration.ipynb  llama_index_agent.ipynb  scrapegraph_langgraph_tavily.ipynb  scrapegraph_langgraph_tavily_mysql.ipynb
cookbook/wired-news/: scrapegraph_langgraph.ipynb  scrapegraph_llama_index.ipynb  scrapegraph_sdk.ipynb
examples/crawl/: crawl_basic.py  crawl_basic_async.py  crawl_pages.py  crawl_pages_async.py  crawl_with_formats.py  crawl_with_formats_async.py
examples/extract/: extract_basic.py  extract_basic_async.py  extract_with_schema.py  extract_with_schema_async.py
examples/monitor/: monitor_basic.py  monitor_basic_async.py  monitor_with_webhook.py  monitor_with_webhook_async.py
examples/scrape/: scrape_basic.py  scrape_basic_async.py  scrape_json_extraction.py  scrape_json_extraction_async.py  scrape_multi_format.py  scrape_multi_format_async.py  scrape_pdf.py  scrape_pdf_async.py  scrape_with_fetchconfig.py  scrape_with_fetchconfig_async.py
examples/search/: search_basic.py  search_basic_async.py  search_with_extraction.py  search_with_extraction_async.py
examples/utilities/: credits.py  credits_async.py  health.py  health_async.py  history.py  history_async.py
scrapegraph-py/: CHANGELOG.md  Makefile  pyproject.toml
scrapegraph-py/scrapegraph_py/: async_client.py  client.py
scrapegraph-py/scrapegraph_py/models/: __init__.py  crawl.py  markdownify.py  scheduled_jobs.py  schema.py  scrape.py  searchscraper.py  smartscraper.py
scrapegraph-py/tests/: test_async_client.py  test_async_scheduled_jobs.py  test_mock_async_client.py  test_mock_client.py  test_scheduled_jobs.py  test_schema_generation.py  test_scrape_comprehensive.py  test_scrape_models.py  test_smartscraper_models.py
src/scrapegraph_py/: __init__.py  async_client.py  client.py  env.py  schemas.py  types.py
tests/: test_client.py  test_integration.py
